# tinympc-python

./: CMakeLists.txt  pyproject.toml
examples/: cartpole_example_code_generation.py
src/tinympc/: interface.py
src/tinympc/codegen/pywrapper/: CMakeLists.txt  setup.py
